2013-11-27  Martin Reiche  <reiche.stud@googlemail.com>

	* func/plot_erp.m: Error bars are only plotted when there is more
	then one subject. Otherwise meaningles to plot SEM, computes SEM
	anyway due to dimension reshaping if erpAll contains only one
	subject. Hence the new behavior. 

	* func/prepSubDir.m: Fixed minor bug. Was unable to read raw data
	folders of available subjects.

	* func/save_erp.m: Fixed a bug concerning concatenating procedure
	of erp structure when perfroming additional
	analyses. erp.path.allFiles won't be saved anymore because it only
	contains data of the subject which was processed at last.

	* func/reReference.m: Added. Perform rereferencing before
	calculation of difference waves and plotting procedure. Can be
	enabled and disabled in config by variable analysis.reref. New
	reference channel is specified in variale analysis.rerefChan. If
	several channels are specified as reference channel, the
	rereferencing will be carried out against the average of the
	specied rereference channels.

2013-11-25  Martin Reiche  <reiche.stud@googlemail.com>

	* func/calc_diff.m: Implemented optional rereferencing before
	baseline correction.

	* config.m: Added settings for rereferencing procedure.

2013-11-20  Martin Reiche  <reiche.stud@googlemail.com>

	* func/segmentation.m (segmentation): Adjusted triggers to be
	handled as strings. Added multi trigger selection routines.

	* func/save_erp.m (save_erp): Adjusted triggers to be handled as
	strings. Added multi trigger selection routines.

	* func/retrigConf.m (retrigConf): Adjusted triggers to be handled
	as strings. Added multi trigger selection routines.

	* func/eeg_rejection.m (eeg_rejection): Adjusted triggers to be handled
	as strings. Added multi trigger selection routines.

	* func/bipolarize.m (bipolarize): Adjusted triggers to be handled
	as strings. Added multi trigger selection routines.

	* eeg_analysis.m (eeg_analysis): BioSig and Brainvision raw data